Fully implement script parser (fully functional, but missing some QOL features)